--- a/ckanext/archiver/templates/package/resource_read.html
+++ b/ckanext/archiver/templates/package/resource_read.html
@@ -30,7 +30,9 @@
               </tr>
               {# We replaced h.format_resource_items with h.archiver_format_resource_items so that we can hide the archiver key #}
               {% for key, value in h.archiver_format_resource_items(res.items()) %}
-                <tr class="toggle-more"><th scope="row">{{ key }}</th><td>{{ value }}</td></tr>
+                {% if key not in ('created', 'metadata modified', 'last modified', 'format') %}
+                <tr class="toggle-more"><th scope="row">{{ _(key | capitalize) }}</th><td>{{ _(value) }}</td></tr>
+                {% endif %}
               {% endfor %}
             </tbody>
           </table>
